client/src/assets/styles.css
#app {
  font-family: "Inter", sans-serif;
  @apply bg-gray-800-spotify no-tap-highlight;
}

@media only screen and (max-width: 1024px) {
  .no-tap-highlight {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media only screen and (max-width: 500px) {
  .image-shadow {
    mask-image: linear-gradient(
      to top,
      rgba(0, 0, 0, 0) 0%,
      rgba(0, 0, 0, 0.9) 30%
    );
  }
}
.truncate-2 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  @apply w-11/12 sm:w-full;
}

.masonry {
  column-count: 2;
  column-gap: 1rem;
}
@screen sm {
  .masonry {
    column-count: 3;
  }
}
@screen xl {
  .masonry {
    column-count: 5;
  }
}
@screen 2xl {
  .masonry {
    column-count: 6;
  }
}
.break-inside {
  break-inside: avoid;
}

.fullwidth {
  width: 100%;
  display: table;
  table-layout: fixed;
}
.horizontal-scroll-wrapper {
  display: flex;
  flex-wrap: nowrap;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;
}
.horizontal-scroll-card {
  flex: 0 0 auto;
}

.sidebar-spotify::-webkit-scrollbar,
.content-spotify::-webkit-scrollbar {
  @apply w-2 bg-gray-900-spotify;
}
.sidebar-spotify::-webkit-scrollbar-thumb,
.content-spotify::-webkit-scrollbar-thumb {
  @apply rounded-lg bg-gray-450-spotify;
}

.link {
  @apply text-white hover:underline;
}

.h-title {
  @apply sm:text-4xl text-3xl font-semibold text-white;
}
.h-subtitle {
  @apply text-base sm:text-lg font-semibold text-gray-500;
}

.responsive-picture {
  @apply relative sm:static -mt-8 -mx-4 sm:m-0 flex md:flex-row flex-col gap-4 sm:items-center items-start duration-300;
}
.responsive-picture__image {
  @apply flex flex-none rounded-b-2xl image-shadow sm:bg-local sm:bg-center sm:bg-cover sm:rounded-full md:rounded-lg w-full h-72 sm:w-40 sm:h-40 md:w-48 md:h-48 object-cover duration-300;
}
.responsive-picture__title {
  @apply absolute sm:relative sm:inset-0 bottom-0 m-4 sm:m-0;
}

.content {
  @apply w-full 2xl:w-3/4 flex flex-col gap-4 items-start;
}
.content-cards,
.content-audio-features {
  @apply md:w-auto w-full masonry;
}

.content-tops {
  @apply flex flex-row gap-3 flex-wrap xl:flex-nowrap;
}
.content-top {
  @apply flex flex-col gap-3;
}
.content-top__items {
  @apply flex-row gap-3 sm:overflow-x-hidden overflow-x-auto flex sm:flex-wrap flex-nowrap sm:mx-0 -mx-4 px-4 sm:px-0;
  -webkit-overflow-scrolling: touch;
}

.content__item {
  @apply flex flex-col gap-3 md:w-auto w-full items-start;
}
.content__item__label {
  @apply text-xl text-white font-medium;
}
.content__item__boxes {
  @apply flex flex-row flex-wrap gap-2;
}
.content__item__boxes__box {
  @apply w-20 h-20 relative;
}
.content__item__boxes__box__image {
  @apply absolute rounded-xl inset-0 w-full h-full object-cover bg-center opacity-40;
}
.content__item__boxes__box__label {
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  @apply truncate-2 absolute flex text-center justify-center items-center text-white font-semibold;
}
.default-border {
  @apply border-gray-700-spotify;
}
hr {
  @apply default-border;
}

